[gd_scene load_steps=5 format=3 uid="uid://dy4krupyxufyb"]

[ext_resource type="Texture2D" uid="uid://dmf8kdqjbyme1" path="res://assets/images/Button/Button.png" id="1_8a41f"]
[ext_resource type="Script" path="res://scenes/button/button.gd" id="1_d7eub"]
[ext_resource type="Texture2D" uid="uid://cqess08u70fpk" path="res://assets/images/Button/Button_Pressured.png" id="2_1uqoj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmtnf"]
size = Vector2(16, 10)

[node name="Button" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_d7eub")

[node name="Button" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_8a41f")

[node name="ButtonPressured" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("2_1uqoj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xmtnf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
